Inheritance of the domain objects